--- a/time-off-management/src/main/resources/static/css/app.css
+++ b/time-off-management/src/main/resources/static/css/app.css
@@ -284,6 +284,10 @@ main {
 	justify-content: center;
 }
    
+ .custom-row{
+	margin-top: 4px !important;
+	margin-bottom: 0px !important;
+}
    
 .btn-search i {
     margin-right: 5px; /* Adjust the spacing between icon and text */
@@ -307,3 +311,4 @@ main {
             width: 100% !important;
             height: 100% !important;
         }
+        
