--- a/time-off-management/src/main/resources/templates/create-department.html
+++ b/time-off-management/src/main/resources/templates/create-department.html
@@ -111,6 +111,21 @@ main {
 	color: #000;
 	font-size: 24px;
 }
+@media (max-width: 767px) {
+
+	 main.col-10 {
+        margin-left: 20px; /* Sidebar is always visible, so push the content */
+    }
+    
+    .form-container {
+		margin-left: 20px;
+	}
+	.header {
+		margin-left: 20px;
+	}
+}
+
+
 </style>
 </head>
 <body>
@@ -118,7 +133,7 @@ main {
 
 		<div class="container">
 			<div class="header">
-				<h2>Enter department details below</h2>
+				<h2>Enter department details.</h2>
 			</div>
 
 			<div class="form-container">
