--- a/time-off-management/src/main/resources/static/css/sidebar.css
+++ b/time-off-management/src/main/resources/static/css/sidebar.css
@@ -17,13 +17,6 @@
 
  
 
- @media (max-width: 767px) {
- 	.sidebar {
- 		margin-left: -250px;
- 		/* Ensure sidebar is initially hidden on smaller screens */
- 	}
-
- }
 
  .brand {
  	display: flex;
@@ -44,6 +37,68 @@
  	color: #000;
  	margin: 0;
  }
+
+ 
+.nav-container {
+	position: relative;
+	display: inline-block;
+	width: 40px;
+	height: 25px;
+	cursor: pointer;
+	z-index: 1000;
+}
+
+.nav-toggle {
+	width: 100%;
+	height: 5px;
+	background-color: gray;
+	position: absolute;
+	transition: transform 0.3s ease, background-color 0.3s ease;
+	margin-top:5px;
+	
+}
+
+.nav-toggle:nth-child(1) {
+	top: 0;
+}
+
+.nav-toggle:nth-child(2) {
+	top: 10px;
+}
+
+.nav-toggle:nth-child(3) {
+	top: 20px;
+}
+
+.nav-container.is-active .nav-toggle:nth-child(1) {
+	transform: translateY(9px) rotate(45deg);
+}
+
+.nav-container.is-active .nav-toggle:nth-child(2) {
+	opacity: 0;
+}
+
+.nav-container.is-active .nav-toggle:nth-child(3) {
+	transform: translateY(-12px) rotate(-45deg);
+}
+
+.sidebar {
+	position: fixed;
+	top: 0;
+	left: -250px;
+	width: 250px;
+	height: 100%;
+	background-color: #95d2b3;
+	color: #55ad9b;
+	padding: 80px 20px 20px 10px;
+	transition: transform .3s ease;
+	z-index: 1;
+	color: #55ad9b;
+}
+
+.sidebar.show {
+	transform: translateX(250px);
+}
 
  .menu-items {
  	list-style: none;
@@ -69,3 +124,66 @@
  .menu-item i {
  	margin-right: 10px;
  }
+ 
+
+@media ( min-width : 768px) {
+	.sidebar {
+		transform: none;
+		left: 0;
+	}
+	.nav-container {
+		display: none;
+	}
+}
+
+/* Handle sidebar and content positioning between 768px and 991px */
+@media (min-width: 768px) and (max-width: 991px) {
+    .sidebar {
+        left: 0; /* Sidebar is shown on the left */
+    }
+
+    .sidebar.show {
+        left: 0; /* Keep sidebar visible */
+    }
+
+    main.col-10 {
+        margin-left: 250px; /* Push content to the right */
+    }
+}
+
+@media (min-width: 992px) {
+    .sidebar {
+        left: 0;
+    }
+
+    main.col-10 {
+        margin-left: 250px; /* Sidebar is always visible, so push the content */
+    }
+}
+
+@media (max-width: 768px) {
+    .flex-fill {
+        display: none;
+    }
+    
+    .navbar {
+    position: relative;
+    display: flex;
+    flex-wrap: nowrap;
+   	align-items: flex-start;
+    justify-content: space-between;
+     padding-top: 0px;
+    padding-bottom: .5rem;
+    }
+    
+    .m-4{
+    	margin-bottom: 0px !important;
+    }
+    
+    .text{
+		font-size: 28px;
+		color: gray;
+    }
+}
+
+ 
