--- a/time-off-management/src/main/resources/templates/create-employee.html
+++ b/time-off-management/src/main/resources/templates/create-employee.html
@@ -17,8 +17,7 @@ body {
 
 .container {
 	max-width: 800px;
-		background-color: #d8efd3;
-	
+	background-color: #d8efd3;
 	margin: auto;
 	padding: 20px;
 }
@@ -101,8 +100,21 @@ select.form-control {
 	color: #dc3545;
 }
 
-.error{
-	color:red;
+.error {
+	color: red;
+}
+
+@media ( max-width : 767px) {
+	main.col-10 {
+		margin-left: 20px;
+		/* Sidebar is always visible, so push the content */
+	}
+	.form-container {
+		margin-left: 20px;
+	}
+	.header {
+		margin-left: 20px;
+	}
 }
 </style>
 </head>
@@ -115,7 +127,7 @@ select.form-control {
 			<div class="form-container">
 				<form th:action="@{/employees}" th:object="${employeeForm}"
 					method="post">
-					
+
 					<div class="form-group">
 						<label for="name">Name:</label> <input type="text" id="name"
 							name="name" class="form-control" th:field="*{name}" required>
@@ -148,8 +160,8 @@ select.form-control {
 					<div class="form-group">
 						<label for="email">Email:</label> <input type="email" id="email"
 							name="email" class="form-control" th:field="*{email}" required>
-							<span class="error"
-							th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email has been taken</span>
+						<span class="error" th:if="${#fields.hasErrors('email')}"
+							th:errors="*{email}">Email has been taken</span>
 					</div>
 					<div class="form-group">
 						<label for="gender">Gender:</label> <select id="gender"
