--- a/time-off-management/src/main/resources/templates/layouts/user-board.html
+++ b/time-off-management/src/main/resources/templates/layouts/user-board.html
@@ -16,27 +16,61 @@
         
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        
+     <script type="text/javascript">
+     document.addEventListener("DOMContentLoaded", function() {
+         const navContainer = document.querySelector('.nav-container');
+         const sidebar = document.querySelector('.sidebar');
+
+         if (navContainer && sidebar) {
+             navContainer.addEventListener('click', function () {
+                 navContainer.classList.toggle('is-active');
+                 sidebar.classList.toggle('show');
+             });
+         }
+     });
+     </script>
     
       
 </head>
 
 <style>
-	
- @media (max-width: 767px) {
- 	html{
- 		background-color: gray	;
- 	}
- 	
- 	.container-fluid{
- 	 		background-color: gray	;
- 	
- 	}
- 	}
+.custom-row {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 20px !important;
+}
+
+.title {
+	text-align: center;
+	position: absolute;
+	top: 8px;
+	left: 5px;
+	font-family: sans-serif;
+	font-size: 26px;
+	color: #000;
+	margin: 0;
+}
 </style>
 <body>
  <div class="container-fluid">
    
-    <div class="row "><!--Main content-->
+   <div class="custom-row row">
+
+
+			<div class="nav-container d-lg-none" tabindex="0">
+
+				<div class="nav-toggle"></div>
+				<div class="nav-toggle"></div>
+				<div class="nav-toggle"></div>
+
+
+			</div>
+
+			<h1 class="d-inline d-lg-none d-md-none title">TIME-OFF</h1>
+
+
+		</div>
         
         <nav class="col-2">
           <span th:replace="~{fragments/user-sidebar :: usersidebar}"></span>
@@ -52,7 +86,6 @@
      
                 
     </div>
-</div>
 
 
 </body>
