--- a/time-off-management/src/main/resources/templates/update-employee.html
+++ b/time-off-management/src/main/resources/templates/update-employee.html
@@ -97,6 +97,20 @@ select.form-control {
 .text-danger {
 	color: #dc3545;
 }
+
+
+@media ( max-width : 767px) {
+	main.col-10 {
+		margin-left: 20px;
+		/* Sidebar is always visible, so push the content */
+	}
+	.form-container {
+		margin-left: 20px;
+	}
+	.header {
+		margin-left: 20px;
+	}
+}
 </style>
 </head>
 <body>
